@@ -12,7 +12,7 @@ use base qw(Exporter);
 
 use vars qw($VERSION @EXPORT @EXPORT_OK %EXPORT_TAGS $DOC);
 
-$VERSION = '1.11';
+$VERSION = '1.12';
 $DOC = 0;
 
 # copy and update P::V's EXPORT* constants
