@@ -1,3 +1,6 @@
+2011-09-02      1.12    Bugfix Documenter.pm to replace *all* underscores
+                          in function names
+
 2011-09-01      1.11    Reduce dependency versions (this is mostly for my
                           employer's benefit - no functional changes)
 
